@@ -1,3 +1,7 @@
+* 2014-03-28 - martin.schneider@open-xchange.com
+
+ - Fix for bug 31795: Do not check capability if session is anonymous
+
 * 2014-03-27 - marc.arens@open-xchange.com
 
  - Fix for bug 26436: Document workaround for Apache < 2.4 and set up combined balancing proxy for usm and eas
